openshift/config/common/files/old-anarchy-resources.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: anarchy-operator
  namespace: anarchy-operator
---
apiVersion: v1
kind: Service
metadata:
  name: anarchy-operator
  namespace: anarchy-operator
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anarchy-operator
  namespace: anarchy-operator
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anarchy-runner-default
  namespace: anarchy-operator
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: anarchy-operator
  namespace: anarchy-k8s-config
---
apiVersion: v1
kind: Service
metadata:
  name: anarchy-operator
  namespace: anarchy-k8s-config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anarchy-operator
  namespace: anarchy-k8s-config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anarchy-runner-default
  namespace: anarchy-k8s-config
